It's a mod, not a plugin*

--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
       </div>
       <div id="section1" class="main-body contain section">
         <div class="section-1">
-          <h1 class="section-1-header">A Twitch-inspired gaming plugin for</h1>
+          <h1 class="section-1-header">A Twitch-inspired gaming mod for</h1>
           <div class="discord">
             <a class="discord-a" href="https://discordapp.com" target="_blank">
               <span class="discord-icon"></span>
               <span class="discord-a-span">Discord</span>
             </a>
           </div>
-          <p class="bd-p">**To be used in conjunction with <a href="https://github.com/rauenzi/BetterDiscordApp" target="_blank" class="bd-a">BetterDiscord</a>.</p>
+          <!-- <p class="bd-p">**To be used in conjunction with <a href="https://github.com/rauenzi/BetterDiscordApp" target="_blank" class="bd-a">BetterDiscord</a>.</p> -->
           <div class="buttons-cont">
             <a class="download1 primary" href="#">Download</a>
             <a class="server1 secondary" href="https://discord.gg/s5wVRA3" target="_blank">Join the Discord Server</a>
