Change the word 'plugin' in more spots

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>Twitchcord | Twitch-inspired plugin for Discord</title>
+    <title>Twitchcord | Twitch-inspired mod for Discord</title>
 
     <!-- StyleSheet -->
     <link id="stylesheet" type="text/css" href="css/style.css" rel="stylesheet" />
@@ -261,7 +261,7 @@
                   </div>
                   <div class="section-large">
                       <h1 class="section-2-header-txt"><span class="black">What</span> is <span class="purple"><span class="black">Twitch</span></span>cord?</h1>
-                      <p class="section-2-para">Twitchcord is a plugin created with the idea of bringing the Twitch style to Discord, combined with a little extra personality.<br>Every aspect and element is carefully crafted and themed with both aesthetics and performance in mind.</p>
+                      <p class="section-2-para">Twitchcord is a modification package created with the idea of bringing the Twitch style to Discord, combined with a little extra personality.<br>Every aspect and element is carefully crafted and themed with both aesthetics and performance in mind.</p>
                   </div>
               </div>
               <div class="section-2-body">
@@ -278,7 +278,7 @@
                   <div class="section-2-3">
                       <span class="everevolving"></span>
                       <h2 class="subheading">Ever Evolving</h2>
-                      <p class="subpara">As Discord continues to grow, change, and update, so too shall Twitchcord. Fear not, there is no end in sight for this plugin.</p>
+                      <p class="subpara">As Discord continues to grow, change, and update, so too shall Twitchcord. Fear not, there is no end in sight for this mod.</p>
                   </div>
               </div>
           </div>
@@ -358,7 +358,7 @@
               <div class="support-header">
                   <div class="section-large">
                       <h1 class="support-header-txt"><span class="black">Need</span> Help?</h1>
-                      <p class="support-para">If you have any problems downloading or using the plugin, or maybe you’d like to make a suggestion or report a bug, or maybe you just want to hang out—whatever the reason, come stop by our Discord server, we’d love to meet you!</p>
+                      <p class="support-para">If you have any problems downloading or using the mod, or maybe you’d like to make a suggestion or report a bug, or maybe you just want to hang out—whatever the reason, come stop by our Discord server, we’d love to meet you!</p>
                       <div class="support-button">
                           <a class="support-button-a primary" href="https://discord.gg/s5wVRA3" target="_blank">Join the Discord Server</a>
                       </div>
