--- a/index.html
+++ b/index.html
@@ -174,6 +174,17 @@
     });
     </script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-27328005-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-27328005-3');
+  </script>
+
+
 </head>
 
 <body>
